去掉slide menu,使用iOS样式

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,5 @@
 // http://ionicframework.com/docs/v2/theming/
-
-
+@import "../theme/variables.scss";
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,3 +13,11 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+ion-navbar {
+  //opacity: 0.8;
+}
+
+.toolbar-background {
+  //background-color: color($colors, primary);
+}
