--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,27 @@
 page-home {
-
+  .card-content-ios{
+    padding-bottom: 0px;
+  }
+  ion-slides {
+    height: 30%;
+    .cover {
+      position: absolute;
+      bottom: 0px;
+      width: 100%;
+      height: 30px;
+      background: linear-gradient(to right, #f9a727, #265ff9);
+      opacity: 0.6;
+    }
+    .title {
+      position: absolute;
+      bottom: 0px;
+      width: 90%;
+      height: 30px;
+      line-height: 30px;
+      font-size: 80%;
+      left: 5px;
+      text-align: center;
+      color: white;
+    }
+  }
 }
