--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -2,4 +2,12 @@ page-tabs {
   ion-fab[bottom] {
     bottom: 0px;
   }
+
+  ion-fab-list[side=left] {
+    margin: -50px 30px;
+  }
+
+  ion-fab-list[side=right] {
+    margin: -50px 30px;
+  }
 }
