--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,6 +1,6 @@
 page-login {
   .splash-bg {
-    background: url('/assets/img/splashbg.png') no-repeat;
+    background: url('../assets/img/splashbg.png') no-repeat;
   }
 
   .sign-up{
