--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -1,3 +1,16 @@
 page-chat {
 
+    .card-content-ios {
+        padding-bottom: 0px;
+    }
+
+    .user-span {
+        float: right;
+        padding-right: 10px
+    }
+    
+    .user-span span {
+        color: #b2b2b2;
+    }
 }
+
