--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -35,6 +35,10 @@ page-home {
     color: #b2b2b2;
   }
 
+  .label-ios {
+    margin-bottom: 0px;
+  }
+
   ion-label {
     white-space: normal;
   }
