--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -10,7 +10,9 @@ page-news {
   .user-span span {
     color: #b2b2b2;
   }
-
+  .label-ios {
+    margin-bottom: 0px;
+  }
   ion-label {
     white-space: normal;
   }
